<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkPrimaryTint">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/registerAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkPrimaryTint"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="@color/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/registerUserImage"
        android:layout_width="240dp"
        android:layout_height="131dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add_user"
        app:layout_constraintBottom_toTopOf="@+id/enteredRegisterUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerAppBar"
        app:layout_constraintVertical_bias="0.564"
        app:srcCompat="@drawable/add_people" />

    <EditText
        android:id="@+id/enteredRegisterUsername"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:drawableEnd="@drawable/person_outline"
        android:hint="@string/name"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAppBar" />

    <EditText
        android:id="@+id/enteredRegisterEmail"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:drawableEnd="@drawable/email_outline_white"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredRegisterUsername" />

    <EditText
        android:id="@+id/enteredRegisterPassword"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:drawableEnd="@drawable/lock_outline_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredRegisterEmail" />

    <EditText
        android:id="@+id/enteredRegisterPasswordConfirm"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:drawableEnd="@drawable/lock_outline_white"
        android:hint="@string/passwordConfirm"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredRegisterPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredRegisterPasswordConfirm"
        app:layout_constraintVertical_bias="0.005" />

    <ProgressBar
        android:id="@+id/loadingRegisterIndicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />


</androidx.constraintlayout.widget.ConstraintLayout>